--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,6 +20,13 @@ body, html {
     width: 100vw;
 }
 
+body {
+        
+    background: black url(../imagens/pexels-pixabay-207153.jpg) no-repeat;background-size: cover;
+    background-position: center center;
+
+}
+
 main {
     position: relative;
     height: 100vh;
@@ -34,10 +41,14 @@ section#login {
     overflow: hidden; /*tudo que tiver fora da borda vai ficar escondido*/
 
     background-color: white;
-    width: 250px;
+    width: 255px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease; /*da suavizada no time*/
+
 }
 
 section#login > div#imagem {
@@ -51,4 +62,13 @@ section#login > div#imagem {
 section#login > div#formulário {
     display: block;
     padding: 10px;
+}
+
+div#formulário > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulário > p {
+    font-size: 0.8em;
 }
