--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,6 +15,7 @@ lilás: #5f2c82
 }
 
 body, html {
+
     background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
@@ -28,16 +29,23 @@ body {
 }
 
 main {
+
+    
+
     position: relative;
     height: 100vh;
     width: 100vw;
+}
+
+section {
+    background: black url(../imagens/pexels-henry-&-co-1939485.jpg) no-repeat;background-size: cover;
+    background-position: center center;
 }
 
 section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden; /*tudo que tiver fora da borda vai ficar escondido*/
 
     background-color: white;
@@ -46,8 +54,11 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
 
+    transform: translate(-50%, -50%); /*sempre botar por ultimo/linha*/
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease; /*da suavizada no time*/
+
+
 
 }
 
@@ -70,5 +81,91 @@ div#formulário > h1 {
 }
 
 div#formulário > p {
+    font-size: 0.8em;
+    margin: 10px 0px;
+    
+}
+
+form > div.campo {
+    background-color:  rgb(247, 247, 247);
+    border: 2px solid gray;
+    display: block;
+    width: 100%;
+    height: 35px;
+    border-radius: 5px;
+    margin: 5px 0px;
+
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > span {
+    color: black;
+   background-color: white;
+    font-size: 2em;
+    width: 40px;
+    height: 100%;
+    border-radius: 5px;
+    padding: 2px;
+}
+
+div.campo > input {
+    background-color: white;
+    font-size: 1em;
+    width: calc(100% - 47px) ;
+    height: 100%;
+
+    border: 0px;
+    border-radius: 5px;
+    padding: 4px;
+
+    transform: translateY(-12px); /*sempre botar por ultimo/linha*/
+}
+
+div.campo > input:focus-within {
+    background-color: rgb(236, 243, 239);
+    
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    padding-top: 5px;
+    margin-top: 5px;
+    width: 100%;
+    height: 35px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #2b5c5a;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2b5c5a;
+    border: 1px solid #49a09d;
+    border-radius: 8px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #49a09d;
+}
+
+form > a.botao > span {
     font-size: 0.8em;
 }
